Documents/cine-memo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cine-memo
  namespace: cine-memo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: cine-memo.sl-information.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cine-memo
                port:
                  number: 80
